* Makefile.in (OBJS): Added dce.o. 	(ssa.o): Updated target to include ssa.h. 	(flow.o): Likewise. 	(toplev.o): Likewise. 	(dce.o): Created target. 	* basic-block.h: Added comments. 	(INVALID_BLOCK): Added definition. 	(connect_infinite_loops_to_exit): Added declaration. 	Moved SSA declarations to ssa.h. 	* flow.c: Added inclusion of ssa.h. 	(struct depth_first_search_dsS, depth_first_search_ds): 	Added definitions. 	(compute_immediate_postdominators): Added definition. 	(connect_infinite_loops_to_exit): Likewise. 	(flow_dfs_compute_reverse_init): Likewise. 	(flow_dfs_compute_reverse_add_bb): Likewise. 	(flow_dfs_compute_reverse_execute): Likewise. 	(flow_dfs_compute_reverse_finish): Likewise. 	* rtl.h (rtx/in_struct): Added use to determine insn necessity. 	(LABEL_P): Added definition. 	(JUMP_P): Likewise. 	(NOTE_P): Likewise. 	(BARRIER_P): Likewise. 	(JUMP_TABLE_DATA_P): Likewise. 	(INSN_DEAD_CODE_P): Likewise. 	* ssa.c: Replaced inclusions with ssa.h inclusion. 	(CONVERT_HARD_REGISTER_TO_SSA_P): Moved to ssa.h. 	(rename_registers): Removed unnecessary variables. 	* ssa.h: Created by moving declarations from ssa.c and 	basic-block.h. 	* timevar.def: Defined TV_DEAD_CODE_ELIM. 	* toplev.c: Added ssa.h inclusion. 	(dump_file_index): Added DFI_dce. 	(dump_file): Added "dce" entry. 	Defined flag_ssa. 	(f_options): Added dce entry. 	* invoke.texi: Document -fdce.  Emphasize experimental status of 	-fssa.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35419 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -696,7 +696,7 @@ OBJS = diagnostic.o							      \
  profile.o insn-attrtab.o $(out_object_file) $(EXTRA_OBJS) convert.o	      \
  mbchar.o splay-tree.o graph.o sbitmap.o resource.o hash.o predict.o	      \
  lists.o ggc-common.o $(GGC) simplify-rtx.o ssa.o bb-reorder.o		      \
- sibcall.o conflict.o timevar.o ifcvt.o
+ sibcall.o conflict.o timevar.o ifcvt.o dce.o
 
 # GEN files are listed separately, so they can be built before doing parallel
 #  makes for cc1 or cc1plus.  Otherwise sequent parallel make attempts to load
@@ -1242,7 +1242,7 @@ toplev.o : toplev.c $(CONFIG_H) system.h $(TREE_H) $(RTL_H) function.h \
    flags.h input.h $(INSN_ATTR_H) xcoffout.h defaults.h output.h diagnostic.h \
    insn-codes.h insn-config.h intl.h $(RECOG_H) Makefile toplev.h dwarfout.h \
    dwarf2out.h sdbout.h dbxout.h $(EXPR_H) hard-reg-set.h $(BASIC_BLOCK_H) \
-   graph.h loop.h  except.h regs.h $(TIMEVAR_H) $(lang_options_files)
+   graph.h loop.h  except.h regs.h $(TIMEVAR_H) $(lang_options_files) ssa.h
 	$(CC) $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(INCLUDES) $(MAYBE_USE_COLLECT2) \
 	  -DTARGET_NAME=\"$(target_alias)\" \
 	  -c `echo $(srcdir)/toplev.c | sed 's,^\./,,'`
@@ -1326,10 +1326,11 @@ resource.o : resource.c $(CONFIG_H) $(RTL_H) hard-reg-set.h system.h \
    $(INSN_ATTR_H) except.h
 lcm.o : lcm.c $(CONFIG_H) system.h $(RTL_H) $(REGS_H) hard-reg-set.h flags.h \
    real.h insn-config.h $(INSN_ATTR_H) $(RECOG_H) $(EXPR_H) $(BASIC_BLOCK_H)
-ssa.o : ssa.c $(CONFIG_H) system.h $(RTL_H) varray.h sbitmap.h		\
-   $(HASHTAB_H) $(REGS_H) hard-reg-set.h flags.h function.h real.h	\
-   insn-config.h $(RECOG_H) $(BASIC_BLOCK_H)				\
-   output.h
+ssa.o : ssa.c $(CONFIG_H) system.h $(REGS_H) varray.h			\
+   hard-reg-set.h flags.h function.h real.h insn-config.h $(RECOG_H)	\
+   $(BASIC_BLOCK_H) output.h ssa.h
+dce.o : dce.c $(CONFIG_H) system.h $(RTL_H) hard-reg-set.h $(BASIC_BLOCK_H) \
+   ssa.h insn-config.h $(RECOG_H) output.h
 conflict.o : conflict.c $(CONFIG_H) system.h $(OBSTACK_H) $(HASHTAB_H) \
    $(RTL_H) hard-reg-set.h $(BASIC_BLOCK_H)
 profile.o : profile.c $(CONFIG_H) system.h $(RTL_H) $(TREE_H) flags.h \
@@ -1345,7 +1346,7 @@ unroll.o : unroll.c $(CONFIG_H) system.h $(RTL_H) insn-config.h function.h \
    hard-reg-set.h varray.h $(BASIC_BLOCK_H)
 flow.o : flow.c $(CONFIG_H) system.h $(RTL_H) $(TREE_H) flags.h insn-config.h \
    $(BASIC_BLOCK_H) $(REGS_H) hard-reg-set.h output.h toplev.h $(RECOG_H) \
-   insn-flags.h function.h except.h $(EXPR_H)
+   insn-flags.h function.h except.h $(EXPR_H) ssa.h
 combine.o : combine.c $(CONFIG_H) system.h $(RTL_H) flags.h function.h \
    insn-config.h insn-flags.h insn-codes.h $(INSN_ATTR_H) $(REGS_H) $(EXPR_H) \
    $(BASIC_BLOCK_H) $(RECOG_H) real.h hard-reg-set.h toplev.h
