* scripts/encodings.pl: New file. 	* Makefile.in: Rebuilt. 	* Makefile.am (convert_source_files): Added IOConverter.java. 	* gnu/gcj/convert/UnicodeToBytes.java (UnicodeToBytes): Extend 	IOConverter. 	(getDefaultDecodingClass): Canonicalize default encoding name. 	(getEncoder): Likewise. 	* gnu/gcj/convert/BytesToUnicode.java (BytesToUnicode): Extend 	IOConverter. 	(getDefaultDecodingClass): Canonicalize default encoding name. 	(getDecoder): Likewise. 	* gnu/gcj/convert/IOConverter.java: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35432 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -473,6 +473,7 @@ gnu/gcj/convert/Input_JavaSrc.java \
 gnu/gcj/convert/Input_SJIS.java \
 gnu/gcj/convert/Input_UTF8.java	\
 gnu/gcj/convert/Input_iconv.java \
+gnu/gcj/convert/IOConverter.java \
 gnu/gcj/convert/Output_8859_1.java \
 gnu/gcj/convert/Output_EUCJIS.java \
 gnu/gcj/convert/Output_JavaSrc.java \
@@ -494,8 +495,8 @@ java/awt/AWTEventMulticaster.java \
 java/awt/AWTException.java \
 java/awt/ActiveEvent.java \
 java/awt/Adjustable.java \
-java/awt/Button.java \
 java/awt/BorderLayout.java \
+java/awt/Button.java \
 java/awt/CheckboxGroup.java \
 java/awt/Color.java \
 java/awt/Component.java	\
