* Makefile.in: Rebuilt. 	* Makefile.am (libgcj_la_SOURCES): Added posix.cc. 	* java/net/natPlainSocketImpl.cc: Include posix.h. 	(accept): Use _Jv_select. 	* java/net/natPlainDatagramSocketImpl.cc: Include posix.h. 	(receive): Use _Jv_select. 	* java/io/natFileDescriptorPosix.cc: Include posix.h. 	(available): Use _Jv_select. 	* java/lang/natSystem.cc: Include posix.h. 	(currentTimeMillis): Use _Jv_gettimeofday. 	* include/posix.h: New file. 	* posix.cc: New file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35435 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -118,7 +118,7 @@ javao_files = $(java_source_files:.java=.lo) \
 ## Extract the libffi object file names.
 libffi_files = `$(AR) t ../libffi/.libs/libffi.a 2>/dev/null | sed 's/\.o/\.lo/g' | sed 's/^/..\/libffi\//g'`
 
-libgcj_la_SOURCES = prims.cc jni.cc exception.cc \
+libgcj_la_SOURCES = prims.cc posix.cc jni.cc exception.cc \
 	resolve.cc defineclass.cc interpret.cc name-finder.cc
 EXTRA_libgcj_la_SOURCES = boehm.cc nogc.cc posix-threads.cc no-threads.cc \
 	$(c_source_files) $(java_source_files) $(built_java_source_files)
