2000-08-03  Bryce McKinlay  <bryce@albatross.co.nz>
	* Makefile.am: Make inner class CNI headers depend on libgcj.zip
	only.
	Fixes "make -j" builds.
	* Makefile.in: Rebuild.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35441 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -284,11 +284,11 @@ gnu/gcj/runtime/VMClassLoader.h: gnu/gcj/runtime/VMClassLoader.class libgcj.zip
 	    -friend 'java::lang::ClassLoader;' \
 	    $(basename $<)
 
-java/io/ObjectInputStream$$GetField.h: java/io/ObjectInputStream$$GetField.class libgcj.zip
+java/io/ObjectInputStream$$GetField.h: libgcj.zip
 	$(GCJH) -classpath $(top_builddir) \
 	'java/io/ObjectInputStream$$GetField'
 
-java/io/ObjectOutputStream$$PutField.h: java/io/ObjectOutputStream$$PutField.class libgcj.zip
+java/io/ObjectOutputStream$$PutField.h: libgcj.zip
 	$(GCJH) -classpath $(top_builddir) \
 	'java/io/ObjectOutputStream$$PutField'
 
