* Makefile.in: Rebuilt. 	* Makefile.am (awt_java_source_files): Added new files.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35457 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -497,16 +497,22 @@ java/awt/ActiveEvent.java \
 java/awt/Adjustable.java \
 java/awt/BorderLayout.java \
 java/awt/Button.java \
+java/awt/Canvas.java \
+java/awt/Checkbox.java \
 java/awt/CheckboxGroup.java \
+java/awt/CheckboxMenuItem.java \
+java/awt/Choice.java \
 java/awt/Color.java \
 java/awt/Component.java	\
 java/awt/ComponentOrientation.java \
 java/awt/Container.java	\
 java/awt/Cursor.java \
+java/awt/Dialog.java \
 java/awt/Dimension.java	\
 java/awt/Event.java \
 java/awt/EventDispatchThread.java \
 java/awt/EventQueue.java \
+java/awt/FileDialog.java \
 java/awt/Font.java \
 java/awt/FontMetrics.java \
 java/awt/Frame.java \
@@ -519,6 +525,7 @@ java/awt/ItemSelectable.java \
 java/awt/Label.java \
 java/awt/LayoutManager.java \
 java/awt/LayoutManager2.java \
+java/awt/List.java \
 java/awt/Menu.java \
 java/awt/MenuBar.java \
 java/awt/MenuComponent.java \
@@ -531,16 +538,19 @@ java/awt/Panel.java \
 java/awt/Point.java \
 java/awt/PopupMenu.java	\
 java/awt/Rectangle.java	\
+java/awt/ScrollPane.java \
 java/awt/Scrollbar.java	\
 java/awt/Shape.java \
 java/awt/TextArea.java \
 java/awt/TextComponent.java \
+java/awt/TextField.java	\
 java/awt/Toolkit.java \
 java/awt/Transparency.java \
 java/awt/Window.java \
 java/awt/color/ColorSpace.java \
 java/awt/color/ICC_ColorSpace.java \
-java/awt/color/ICC_Profile.java \
+java/awt/color/ICC_Profile.java	\
+java/awt/datatransfer/Clipboard.java \
 java/awt/event/AWTEventListener.java \
 java/awt/event/ActionEvent.java	\
 java/awt/event/ActionListener.java \
@@ -589,7 +599,7 @@ java/awt/geom/Point2D.java \
 java/awt/geom/Rectangle2D.java \
 java/awt/geom/RectangularShape.java \
 java/awt/image/ColorModel.java \
-java/awt/image/ComponentColorModel.java \
+java/awt/image/ComponentColorModel.java	\
 java/awt/image/ComponentSampleModel.java \
 java/awt/image/DataBuffer.java \
 java/awt/image/DataBufferByte.java \
@@ -602,7 +612,7 @@ java/awt/image/ImageProducer.java \
 java/awt/image/IndexColorModel.java \
 java/awt/image/PackedColorModel.java \
 java/awt/image/Raster.java \
-java/awt/image/SampleModel.java \
+java/awt/image/SampleModel.java	\
 java/awt/image/SinglePixelPackedSampleModel.java \
 java/awt/image/WritableRaster.java \
 java/awt/peer/ButtonPeer.java \
