* cpplex.c (parse_name): Might have to glue a CPP_OTHER token 	before the name. 	(lex_line): Glue @ onto the beginning of identifiers and 	string constants, in Objective-C mode. 	(output_token, spell_token): Handle CPP_OSTRING. 	(can_paste, maybe_paste_with_next): Handle pasting @ onto the 	beginning of a NAME or a STRING, in objc mode.
	* cpplib.c (get_define_node): Do not permit identifiers that
	begin with @ to be #defined.
	* cppmacro.c (CAN_PASTE_AFTER): Add CPP_OTHER.
	* cpplib.h (TTYPE_TABLE): Add CPP_OSTRING.

	* c-lang.c, objc/objc-act.c (build_objc_string): Delete.
	* c-tree.h (build_objc_string): Delete prototype.
	* objc/objc-tree.def: Delete OBJC_STRING_CST.
	* c-lex.c (yylex): Use build_string for all three kinds of strings.

	* gcc.dg/cpp/20000625-2.c: Don't expect a warning on line 4.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35470 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -150,7 +150,7 @@ end ifc
 %token CLASSNAME PUBLIC PRIVATE PROTECTED PROTOCOL OBJECTNAME CLASS ALIAS
 
 /* Objective-C string constants in raw form.
-   yylval is an OBJC_STRING_CST node.  */
+   yylval is an STRING_CST node.  */
 %token OBJC_STRING
 
 
@@ -753,8 +753,8 @@ end ifc
 	;
 
 ifobjc
-/* Produces an OBJC_STRING_CST with perhaps more OBJC_STRING_CSTs chained
-   onto it.  */
+/* Produces an STRING_CST with perhaps more STRING_CSTs chained
+   onto it, which is to be read as an ObjC string object.  */
 objc_string:
 	  OBJC_STRING
 	| objc_string OBJC_STRING
