* configure.in: Use default thread_file even when enable_threads is         yes or dce because hpux10.20 pa port uses MULTILIB implementation.         * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35488 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1134,10 +1134,11 @@ changequote([,])dnl
 		if test x$enable_threads = x; then
 		    enable_threads=$have_pthread_h
 		fi
- 		if test x$enable_threads = xyes; then
-			thread_file='dce'
+ 		case x${enable_threads} in
+		xyes | xdce)
 			tmake_file="${tmake_file} pa/t-dce-thr"
-		fi
+			;;
+		esac
 		install_headers_dir=install-headers-cpio
 		use_collect2=yes
 		;;
@@ -1154,10 +1155,11 @@ changequote([,])dnl
 		if test x$enable_threads = x; then
 		    enable_threads=$have_pthread_h
 		fi
- 		if test x$enable_threads = xyes; then
-			thread_file='dce'
+ 		case x${enable_threads} in
+		xyes | xdce)
 			tmake_file="${tmake_file} pa/t-dce-thr"
-		fi
+			;;
+		esac
 		install_headers_dir=install-headers-cpio
 		use_collect2=yes
 		;;
