--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -684,8 +684,8 @@ C_AND_OBJC_OBJS = c-errors.o c-lex.o c-pragma.o c-decl.o c-typeck.o \
 C_OBJS = c-parse.o c-lang.o $(C_AND_OBJC_OBJS)
 
 # Language-independent object files.
-OBJS = diagnostic.o							      \
- toplev.o version.o tree.o print-tree.o stor-layout.o fold-const.o	      \
+
+OBJS = diagnostic.o version.o tree.o print-tree.o stor-layout.o fold-const.o  \
  function.o stmt.o except.o expr.o calls.o expmed.o explow.o optabs.o real.o  \
  builtins.o intl.o varasm.o rtl.o print-rtl.o rtlanal.o emit-rtl.o genrtl.o   \
  dbxout.o sdbout.o dwarfout.o dwarf2out.o xcoffout.o bitmap.o alias.o gcse.o  \
@@ -697,6 +697,8 @@ OBJS = diagnostic.o							      \
  mbchar.o splay-tree.o graph.o sbitmap.o resource.o hash.o predict.o	      \
  lists.o ggc-common.o $(GGC) simplify-rtx.o ssa.o bb-reorder.o		      \
  sibcall.o conflict.o timevar.o ifcvt.o dce.o
+
+BACKEND = toplev.o libbackend.a
 
 # GEN files are listed separately, so they can be built before doing parallel
 #  makes for cc1 or cc1plus.  Otherwise sequent parallel make attempts to load
@@ -720,7 +722,7 @@ STAGESTUFF = *$(objext) insn-flags.h insn-config.h insn-codes.h \
  $(EXTRA_PARTS) $(EXTRA_PROGRAMS) gcc-cross$(exeext) cc1obj$(exeext) \
  enquire$(exeext) protoize$(exeext) unprotoize$(exeext) \
  specs collect2$(exeext) $(USE_COLLECT2) underscore.c tradcpp0$(exeext) \
- gcov$(exeext) *.[0-9][0-9].* *.[si] libcpp.a libgcc libgcc.mk \
+ gcov$(exeext) *.[0-9][0-9].* *.[si] libcpp.a libbackend.a libgcc libgcc.mk \
  $(LANG_STAGESTUFF)
 
 # Members of libgcc1.a.
@@ -894,12 +896,13 @@ libgcc1-test.o: libgcc1-test.c native xgcc$(exeext)
 
 # Recompile all the language-independent object files.
 # This is used only if the user explicitly asks for it.
-compilations: ${OBJS}
+compilations: $(BACKEND)
 
-# Create a list of the language-independent object files so the language
-# subdirectories needn't mention their names explicitly.
-stamp-objlist: $(OBJS)
-	echo " $(OBJS)" | sed -e 's, \([a-z0-9]\), ../\1,g' -e 's/\.o/$(objext)/g' >stamp-objlist
+# Like libcpp.a, this archive is strictly for the host.
+libbackend.a: $(OBJS)
+	-rm -rf libbackend.a
+	$(AR) $(AR_FLAGS) libbackend.a $(OBJS)
+	if $(RANLIB_TEST) ; then $(RANLIB) libbackend.a ; else true ; fi
 
 # We call this executable `xgcc' rather than `gcc'
 # to avoid confusion if the current directory is in the path
@@ -928,8 +931,9 @@ specs: xgcc$(exeext)
 gcc-cross: xgcc$(exeext)
 	cp xgcc$(exeext) gcc-cross$(exeext)
 
-cc1$(exeext): $(P) $(OBJS) $(C_OBJS) $(LIBDEPS)
-	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o $@ $(OBJS) $(C_OBJS) $(LIBS)
+cc1$(exeext): $(P) $(C_OBJS) $(BACKEND) $(LIBDEPS)
+	$(CC) $(ALL_CFLAGS) $(LDFLAGS) -o cc1$(exeext) \
+		$(C_OBJS) $(BACKEND) $(LIBS)
 
 # Build the version of limits.h that we will install.
 xlimits.h: glimits.h limitx.h limity.h
@@ -1792,9 +1796,8 @@ LIBCPP_OBJS =	cpplib.o cpplex.o cppmacro.o cppexp.o cppfiles.o \
 
 LIBCPP_DEPS =	cpplib.h cpphash.h intl.h system.h
 
-# All the other archives built/used by this makefile are for targets.  This
-# one is strictly for the host.
-#
+# Most of the other archives built/used by this makefile are for
+# targets.  This one is strictly for the host.
 libcpp.a: $(LIBCPP_OBJS)
 	-rm -rf libcpp.a
 	$(AR) $(AR_FLAGS) libcpp.a $(LIBCPP_OBJS)
@@ -2753,7 +2756,7 @@ diff:
 	  gcc-$(oldversion) gcc-$(version) > gcc-$(oldversion)-$(version).diff
 
 # A list of files to be destroyed during "lean" builds.
-VOL_FILES=`echo $(OBJS) $(C_OBJS) $(LIBCPP_OBJS) *.c *.h gen*`
+VOL_FILES=`echo $(BACKEND) $(OBJS) $(C_OBJS) $(LIBCPP_OBJS) *.c *.h gen*`
 
 bootstrap bootstrap-lean: force
 # Only build the C compiler for stage1, because that is the only one that
