Changed the language string for Objective-C to "GNU Objective-C".
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35539 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -59,7 +59,7 @@ end ifobjc
 /* Since parsers are distinct for each language, put the language string
    definition here.  */
 ifobjc
-const char * const language_string = "GNU Obj-C";
+const char * const language_string = "GNU Objective-C";
 end ifobjc
 ifc
 const char * const language_string = "GNU C";
