* configure.in (FLAGS_FOR_TARGET): invert test for xgcc, should mean "if we're also building gcc, and it's a gcc that will run on the build machine, we want to use its includes instead of the system's default includes".
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35553 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -1252,7 +1252,7 @@ case " $skipdirs " in
    # If we're using a pre-built compiler (which is the case for
    # Canadian crosses or when gcc isn't being built), don't discard
    # standard headers.
-   if test "${build}" = "${host}" && test ! -d ${topsrcdir}/gcc; then
+   if test "${build}" = "${host}" && test -d ${topsrcdir}/gcc; then
      FLAGS_FOR_TARGET=$FLAGS_FOR_TARGET' -nostdinc'
    fi
 
