--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -254,22 +254,26 @@ elif test x$withval != xno; then
   cpp_install_dir=$withval
 fi])
 
-dnl Disable this for the moment; the library interface is changing.
-dnl # Link cpplib into the compiler proper, for C/C++/ObjC.
-dnl AC_ARG_ENABLE(c-cpplib,
-dnl [  --enable-c-cpplib       link cpplib directly into C and C++ compilers
-dnl                           (EXPERIMENTAL) (implies --enable-cpplib).],
-dnl if test x$enable_c_cpplib != xno; then
-dnl  extra_c_objs="${extra_c_objs} libcpp.a"
-dnl  extra_cxx_objs="${extra_cxx_objs} ../libcpp.a"
-dnl  extra_c_flags="${extra_c_flags} -DUSE_CPPLIB=1"
-dnl fi)
+# Link cpplib into the compiler proper, for C/C++/ObjC.
+AC_ARG_ENABLE(c-cpplib,
+[  --enable-c-cpplib       link cpplib directly into C and C++ compilers
+                           (HIGHLY EXPERIMENTAL).],
+if test x$enable_c_cpplib != xno; then
+  extra_c_objs="${extra_c_objs} libcpp.a"
+  extra_cxx_objs="${extra_cxx_objs} ../libcpp.a"
+  AC_DEFINE(USE_CPPLIB, 1,
+  [Define if you want the preprocessor merged into the C and C++ compilers.
+   This mode is not ready for production use.])
+
+fi)
 
 # Enable Multibyte Characters for C/C++
 AC_ARG_ENABLE(c-mbchar,
 [  --enable-c-mbchar       Enable multibyte characters for C and C++.],
 if test x$enable_c_mbchar != xno; then
-  extra_c_flags="${extra_c_flags} -DMULTIBYTE_CHARS=1"
+  AC_DEFINE(MULTIBYTE_CHARS, 1,
+  [Define if you want the C and C++ compilers to support multibyte
+   character sets for source code.])
 fi)
   
 # Enable threads
