--- a/gcc/config.in
+++ b/gcc/config.in
@@ -237,6 +237,9 @@
 /* Define if you have the <nl_types.h> header file.  */
 #undef HAVE_NL_TYPES_H
 
+/* Define if you have the <sched.h> header file.  */
+#undef HAVE_SCHED_H
+
 /* Define if you have the <stab.h> header file.  */
 #undef HAVE_STAB_H
 
